Fix manual session saving

Seems like this bug have been introduced accidentally by 3558eca7

BUG: 450756
FIXED-IN: 5.27


(cherry picked from commit a5f0975900ad022308a24271374c16efafe14280)